--- a/.github/workflows/pickles.yml
+++ b/.github/workflows/pickles.yml
@@ -17,6 +17,6 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Generate Pickles Report
-    - run: ls
+      run: ls
       run: docker run -ti -v /root/pickles-serenitybdd-example/report:/pickles  ghcr.io/prmiguel/docker-pickles:v3.0.1 --feature-directory=./src/test/resources/features --output-directory=./report -df=dhtml 
-    - run: ls
+      run: ls
