--- a/.github/workflows/pickles.yml
+++ b/.github/workflows/pickles.yml
@@ -16,6 +16,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - name: test
+      run: pwd & ls
     - name: Generate Pickles Report
       run: docker run -t -v /root/pickles-serenitybdd-example/report:/pickles  ghcr.io/prmiguel/docker-pickles:v3.0.1 --feature-directory=./src/test/resources/features --output-directory=./report -df=dhtml 
       
