--- a/.github/workflows/pickles.yml
+++ b/.github/workflows/pickles.yml
@@ -22,4 +22,9 @@ jobs:
       with:
         name: pickles
         path: report/
-        
+    - name: Deploy
+      uses: JamesIves/github-pages-deploy-action@v4.2.5
+        with:
+          branch: gh-pages
+          folder: report
+          .
