--- a/.github/workflows/pickles.yml
+++ b/.github/workflows/pickles.yml
@@ -22,9 +22,8 @@ jobs:
       with:
         name: pickles
         path: report/
-    - name: Deploy
-      uses: JamesIves/github-pages-deploy-action@v4.2.5
+    - uses: JamesIves/github-pages-deploy-action@v4.2.5
         with:
           branch: gh-pages
           folder: report
-          .
+            .
