--- a/.github/workflows/pickles.yml
+++ b/.github/workflows/pickles.yml
@@ -25,5 +25,5 @@ jobs:
     - name: Publish
       uses: JamesIves/github-pages-deploy-action@4.1.1
       with:
-        branch: gh-pages
+        branch: pickles-pages
         folder: report/
