--- a/.github/workflows/pickles.yml
+++ b/.github/workflows/pickles.yml
@@ -22,6 +22,8 @@ jobs:
           --feature-directory=./src/test/resources/features
           --output-directory=./report
           -df=dhtml
+    - name: Rename index.html file
+      run: mv ./report/Index.html ./report/index.html
     - uses: actions/upload-artifact@v3
       with:
         name: pickles
