--- a/.github/workflows/pickles.yml
+++ b/.github/workflows/pickles.yml
@@ -23,7 +23,7 @@ jobs:
           --output-directory=./report
           -df=dhtml
     - name: Rename index.html file
-      run: cp ./report/Index.html ./report/index.html
+      run: sudo cp ./report/Index.html ./report/index.html
     - uses: actions/upload-artifact@v3
       with:
         name: pickles
