--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -23,7 +23,11 @@ jobs:
         distribution: 'adopt'
 
     - name: Build with Maven
-      run: mvn verify --file pom.xml
+      run: mvn clean verify -Pcucumber
+    - name: test
+      run: ls
+    - name: test2
+      run: ls .reports/cucumber
 
     - name: Deploy
       uses: JamesIves/github-pages-deploy-action@4.1.1
